# fastapi-kafka

./: .env  .gitignore  README.md  compose.yml  main.py
src/alerts/: Dockerfile  main.py  pyproject.toml
src/hunters_incoming/: Dockerfile  kafka.py  main.py  pyproject.toml
src/lib/: kafka.py
src/lib/models/: alert.py
src/notifications/: Dockerfile  main.py  pyproject.toml
src/webhook_handler/: main.py  pyproject.toml
